[package]
name = "rhoevm"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
hex = "0.4.3"
num_cpus = "1.16.0"
futures = "0.3.30"
tiny-keccak = { version = "2.0", features = ["keccak"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
thiserror = "1.0.62"
crossbeam = "0.8"
derive_more = "0.99.18"
async-trait = "0.1.81"
uint = "0.9.5"